k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gta6-news-hub
spec:
  selector:
    app: gta6-news-hub
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: gta6-news-hub-lb
spec:
  selector:
    app: gta6-news-hub
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: LoadBalancer
